performance polish (issue #5)

--- a/pages/testimonials.html
+++ b/pages/testimonials.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!--For development purposes only-->
-        <meta http-equiv="refresh" content="5">
         <link rel="icon" href="../asset/logo.webp" type="image/png">
         <link rel="shortcut icon" href="../asset/logo.webp" type="image/png">
         <title>Pricing</title>
@@ -42,17 +37,17 @@
             Testimonials
             </div>
             <div class="container">
-            <img src="../asset/music-5833695_1920.webp" alt="Avatar" style="width:90px">
+            <img src="../asset/music-5833695_1920.webp" width="90px" height="90px" alt="Avatar"/>
             <p><span>Chris Fox.</span> CEO at Mighty Schools. &bigstar; &bigstar; &bigstar; &bigstar; &bigstar;</p>
             <p>One of the best music rating apps</p>
             </div>
             <div class="container">
-            <img src="../asset/music-7009823_1920.webp" alt="Avatar" style="width:90px">
+            <img src="../asset/music-7009823_1920.webp" width="90px" height="90px" alt="Avatar">
             <p><span>Rebecca Flex.</span> CEO at YouTube. &bigstar; &bigstar; &bigstar; &bigstar; &bigstar;</p>
             <p>Amazing discussion community of music lovers</p>
             </div>
             <div class="container">
-            <img src="../asset/android-1635207_1280.webp" alt="Avatar" style="width:90px">
+            <img src="../asset/android-1635207_1280.webp" width="90px" height="90px" alt="Avatar">
             <p><span>Anan Afrida.</span> CEO at Google Music. &bigstar; &bigstar; &bigstar; &bigstar; &bigstar;</p>
             <p>Taylor Swift still reigns and it is authenticated through this app</p>
             </div>
