--- a/pages/faqs.html
+++ b/pages/faqs.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!--For development purposes only-->
-        <meta http-equiv="refresh" content="5">
         <link rel="icon" href="../asset/logo.webp" type="image/png">
         <link rel="shortcut icon" href="../asset/logo.webp" type="image/png">
         <title>Pricing</title>
