--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!--For development purposes only-->
-        <meta http-equiv="refresh" content="5">
         <link rel="icon" href="../asset/logo.webp" type="image/png">
         <link rel="shortcut icon" href="../asset/logo.webp" type="image/png">
         <title>Pricing</title>
@@ -43,9 +38,9 @@
        </h1>
        <ul id="pricing">
         <li class="pricing-box">
-            <h3 class="pricing-tier">
+            <h2 class="pricing-tier">
                 Basic (Free)
-            </h3>
+            </h2>
             <div class="horizontal-line"></div>
             <ul class="price-benefits">
                 <li>
@@ -60,9 +55,9 @@
             </ul>
         </li>
         <li class="pricing-box">
-            <h3 class="pricing-tier">
+            <h2 class="pricing-tier">
                 Standard ($9.99)
-            </h3>
+            </h2>
             <div class="horizontal-line"></div>
             <ul class="price-benefits">
                 <li>
@@ -77,9 +72,9 @@
             </ul>
         </li>
         <li class="pricing-box">
-            <h3 class="pricing-tier">
+            <h2 class="pricing-tier">
                 Pro ($14.99)
-            </h3>
+            </h2>
             <div class="horizontal-line"></div>
             <ul class="price-benefits">
                 <li>
